<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/backgroundColour"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/calculate_your"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/age"
        android:padding="11dp"
        android:background="@color/ageTextBackgroundColour"
        android:textAllCaps="true"
        android:textColor="@color/ageTextColour"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/in_minutes"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="23sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:padding="11dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:layout_marginTop="22sp"
        android:textSize="20sp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#B8B8B8"
        android:text="@string/selected_date"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvSelectedDateInHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:layout_marginTop="20sp"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#B8B8B8"
        android:text="@string/age_in_hours"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvSelectedDateInMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:layout_marginTop="20sp"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#B8B8B8"
        android:text="@string/age_in_minutes"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tvSelectedDateDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#844046"
        android:layout_marginTop="20sp"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#B8B8B8"
        android:text="@string/days"
        android:textSize="18sp"/>


</LinearLayout>